Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="s-header__logo">
                 <a class="logo" href="index.html">
-                    <img src="images/Braze (1).svg" alt="Homepage">
+                    <img src="images/brezee.svg" alt="Homepage">
                 </a>
             </div>
 
