Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
                 </ul>
 
                 <p>
-                Need a great reliable web hosting?
-                We highly recommend <a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a>. 
-                Powerful web and Wordpress hosting. Guaranteed. Starting at <span class="text-highlight">$2.95</span> per month.
+                
                 </p>
 
                 <ul class="s-header__social">
@@ -196,7 +194,8 @@
                     <div class="column lg-12">
                         <h2 class="text-pretitle" data-animate-el>Nosotros</h2>
                         <p class="s-about__desc" data-animate-el>
-                            <span>Breeze Estudio</span>Transformamos tus ideas en identidades visuales impactantes. Nuestro equipo de diseñadores apasionados se especializa en la creación de logotipos, branding y diseño gráfico integral, ofreciendo soluciones creativas y personalizadas que capturan la esencia de tu marca. Explora nuestra galería para descubrir cómo podemos hacer que tu visión cobre vida con estilo y profesionalismo.
+                            <span>Breeze Estudio</span>
+Transformamos tus ideas en identidades visuales impactantes. Nuestro equipo de diseñadores apasionados se especializa en la creación de logotipos, branding y diseño gráfico integral, ofreciendo soluciones creativas y personalizadas que capturan la esencia de tu marca. Explora nuestra galería para descubrir cómo podemos hacer que tu visión cobre vida con estilo y profesionalismo.
                         </p>
                     </div> <!-- end column  -->
                 </div> <!-- end s-about__content  -->
@@ -597,7 +596,7 @@
                         <h5 class="with-top-line">Contact Us</h5>
         
                         <ul class="s-contact__list">
-                            <li><a href="mailto:#0">info@infinity.com</a></li>
+                            <li><a href="mailto:#0">info@breezeestudio.com</a></li>
                             <li><a href="tel:197-543-2345">+549 543 2345</a></li>
                             <li><a href="tel:197-123-9876">+549 123 9876</a></li>
                         </ul>
