Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -330,14 +330,14 @@ Transformamos tus ideas en identidades visuales impactantes. Nuestro equipo de d
                                     </a>
                                 </div>
                                 <div class="folio-item__info">
-                                    <div class="folio-item__cat">Web Development</div>
-                                    <h4 class="folio-item__title">Shutterbug</h4>
+                                    <div class="folio-item__cat">Branding</div>
+                                    <h4 class="folio-item__title">Mainumby</h4>
                                 </div>
-                                <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">
+                                <a href="#" title="Project Link" class="folio-item__project-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M4.222 19.778a4.983 4.983 0 0 0 3.535 1.462 4.986 4.986 0 0 0 3.536-1.462l2.828-2.829-1.414-1.414-2.828 2.829a3.007 3.007 0 0 1-4.243 0 3.005 3.005 0 0 1 0-4.243l2.829-2.828-1.414-1.414-2.829 2.828a5.006 5.006 0 0 0 0 7.071zm15.556-8.485a5.008 5.008 0 0 0 0-7.071 5.006 5.006 0 0 0-7.071 0L9.879 7.051l1.414 1.414 2.828-2.829a3.007 3.007 0 0 1 4.243 0 3.005 3.005 0 0 1 0 4.243l-2.829 2.828 1.414 1.414 2.829-2.828z"></path><path d="m8.464 16.95-1.415-1.414 8.487-8.486 1.414 1.415z"></path></svg>
                                 </a>
                                 <div class="folio-item__caption">
-                                    <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                    <p>breve descripción.</p>
                                 </div>
                                 
                              </div> <!-- end brick-->
@@ -352,13 +352,13 @@ Transformamos tus ideas en identidades visuales impactantes. Nuestro equipo de d
                                 </div>
                                 <div class="folio-item__info">
                                     <div class="folio-item__cat">Marketing</div>
-                                    <h4 class="folio-item__title">Yellow Wall</h4>
+                                    <h4 class="folio-item__title">Eliane</h4>
                                 </div>
-                                <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">
+                                <a href="#" title="Project Link" class="folio-item__project-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M4.222 19.778a4.983 4.983 0 0 0 3.535 1.462 4.986 4.986 0 0 0 3.536-1.462l2.828-2.829-1.414-1.414-2.828 2.829a3.007 3.007 0 0 1-4.243 0 3.005 3.005 0 0 1 0-4.243l2.829-2.828-1.414-1.414-2.829 2.828a5.006 5.006 0 0 0 0 7.071zm15.556-8.485a5.008 5.008 0 0 0 0-7.071 5.006 5.006 0 0 0-7.071 0L9.879 7.051l1.414 1.414 2.828-2.829a3.007 3.007 0 0 1 4.243 0 3.005 3.005 0 0 1 0 4.243l-2.829 2.828 1.414 1.414 2.829-2.828z"></path><path d="m8.464 16.95-1.415-1.414 8.487-8.486 1.414 1.415z"></path></svg>
                                 </a>
                                 <div class="folio-item__caption">
-                                    <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                    <p>breve descripción</p>
                                 </div>
 
                             </div> <!-- end brick-->
@@ -372,14 +372,14 @@ Transformamos tus ideas en identidades visuales impactantes. Nuestro equipo de d
                                     </a>
                                 </div>
                                 <div class="folio-item__info">
-                                    <div class="folio-item__cat">Marketing</div>
-                                    <h4 class="folio-item__title">Architecture</h4>
+                                    <div class="folio-item__cat">Branding</div>
+                                    <h4 class="folio-item__title">Romina Valle</h4>
                                 </div>
-                                <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">
+                                <a href="#" title="Project Link" class="folio-item__project-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M4.222 19.778a4.983 4.983 0 0 0 3.535 1.462 4.986 4.986 0 0 0 3.536-1.462l2.828-2.829-1.414-1.414-2.828 2.829a3.007 3.007 0 0 1-4.243 0 3.005 3.005 0 0 1 0-4.243l2.829-2.828-1.414-1.414-2.829 2.828a5.006 5.006 0 0 0 0 7.071zm15.556-8.485a5.008 5.008 0 0 0 0-7.071 5.006 5.006 0 0 0-7.071 0L9.879 7.051l1.414 1.414 2.828-2.829a3.007 3.007 0 0 1 4.243 0 3.005 3.005 0 0 1 0 4.243l-2.829 2.828 1.414 1.414 2.829-2.828z"></path><path d="m8.464 16.95-1.415-1.414 8.487-8.486 1.414 1.415z"></path></svg>
                                 </a>
                                 <div class="folio-item__caption">
-                                    <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                    <p>breve descripción.</p>
                                 </div>
 
                             </div> <!-- end brick-->
@@ -393,14 +393,14 @@ Transformamos tus ideas en identidades visuales impactantes. Nuestro equipo de d
                                     </a>
                                 </div>
                                 <div class="folio-item__info">
-                                    <div class="folio-item__cat">UI/UX Design</div>
-                                    <h4 class="folio-item__title">Minimalismo</h4>
+                                    <div class="folio-item__cat">Branding</div>
+                                    <h4 class="folio-item__title">Mi intimidad</h4>
                                 </div>
-                                <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">
+                                <a href="#" title="Project Link" class="folio-item__project-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M4.222 19.778a4.983 4.983 0 0 0 3.535 1.462 4.986 4.986 0 0 0 3.536-1.462l2.828-2.829-1.414-1.414-2.828 2.829a3.007 3.007 0 0 1-4.243 0 3.005 3.005 0 0 1 0-4.243l2.829-2.828-1.414-1.414-2.829 2.828a5.006 5.006 0 0 0 0 7.071zm15.556-8.485a5.008 5.008 0 0 0 0-7.071 5.006 5.006 0 0 0-7.071 0L9.879 7.051l1.414 1.414 2.828-2.829a3.007 3.007 0 0 1 4.243 0 3.005 3.005 0 0 1 0 4.243l-2.829 2.828 1.414 1.414 2.829-2.828z"></path><path d="m8.464 16.95-1.415-1.414 8.487-8.486 1.414 1.415z"></path></svg>
                                 </a>
                                 <div class="folio-item__caption">
-                                    <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                    <p>breve descripción.</p>
                                 </div>
 
                             </div> <!-- end brick-->
@@ -415,13 +415,13 @@ Transformamos tus ideas en identidades visuales impactantes. Nuestro equipo de d
                                 </div>
                                 <div class="folio-item__info">
                                     <div class="folio-item__cat">Branding</div>
-                                    <h4 class="folio-item__title">Skaterboy</h4>
+                                    <h4 class="folio-item__title">Susu</h4>
                                 </div>
-                                <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">
+                                <a href="#" title="Project Link" class="folio-item__project-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M4.222 19.778a4.983 4.983 0 0 0 3.535 1.462 4.986 4.986 0 0 0 3.536-1.462l2.828-2.829-1.414-1.414-2.828 2.829a3.007 3.007 0 0 1-4.243 0 3.005 3.005 0 0 1 0-4.243l2.829-2.828-1.414-1.414-2.829 2.828a5.006 5.006 0 0 0 0 7.071zm15.556-8.485a5.008 5.008 0 0 0 0-7.071 5.006 5.006 0 0 0-7.071 0L9.879 7.051l1.414 1.414 2.828-2.829a3.007 3.007 0 0 1 4.243 0 3.005 3.005 0 0 1 0 4.243l-2.829 2.828 1.414 1.414 2.829-2.828z"></path><path d="m8.464 16.95-1.415-1.414 8.487-8.486 1.414 1.415z"></path></svg>
                                 </a>
                                 <div class="folio-item__caption">
-                                    <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                    <p>breve descripción.</p>
                                 </div>
 
                             </div> <!-- end brick-->
@@ -436,13 +436,13 @@ Transformamos tus ideas en identidades visuales impactantes. Nuestro equipo de d
                                 </div>
                                 <div class="folio-item__info">
                                     <div class="folio-item__cat">Branding</div>
-                                    <h4 class="folio-item__title">Salad</h4>
+                                    <h4 class="folio-item__title">Cerino Día & Asociados</h4>
                                 </div>
-                                <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">
+                                <a href="#" title="Project Link" class="folio-item__project-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M4.222 19.778a4.983 4.983 0 0 0 3.535 1.462 4.986 4.986 0 0 0 3.536-1.462l2.828-2.829-1.414-1.414-2.828 2.829a3.007 3.007 0 0 1-4.243 0 3.005 3.005 0 0 1 0-4.243l2.829-2.828-1.414-1.414-2.829 2.828a5.006 5.006 0 0 0 0 7.071zm15.556-8.485a5.008 5.008 0 0 0 0-7.071 5.006 5.006 0 0 0-7.071 0L9.879 7.051l1.414 1.414 2.828-2.829a3.007 3.007 0 0 1 4.243 0 3.005 3.005 0 0 1 0 4.243l-2.829 2.828 1.414 1.414 2.829-2.828z"></path><path d="m8.464 16.95-1.415-1.414 8.487-8.486 1.414 1.415z"></path></svg>
                                 </a>
                                 <div class="folio-item__caption">
-                                    <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                    <p>breve descripción.</p>
                                 </div>
 
                             </div> <!-- end brick-->
